OldArchive/08e8befd632e653186ec8c4ab4d350d8-83e866535a38890f283077ce45ff5373/output
+ g++-4.8 -std=c++98 -O2 -Wall -pedantic main.cpp
main.cpp: In instantiation of 'void f(ptr_to_t) [with ptr_to_t = int*]':
main.cpp:10:18:   required from here
main.cpp:4:15: error: invalid conversion from 'int' to 't {aka int*}' [-fpermissive]
     t elem = *x;
               ^
